...
            "state" : "translated",
            "value" : "Vierge"
          }
        }
      }
    },
    "Blue" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Blau"
          }
...
            "state" : "translated",
            "value" : "Les dossiers n’ont pas pu être enregistrés : %@"
          }
        }
      }
    },
    "Fountain Pen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Füllfederhalter"
          }
...
            "state" : "translated",
            "value" : "Gris"
          }
        }
      }
    },
    "Green" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Grün"
          }
...
            "state" : "translated",
            "value" : "Masquer la barre latérale"
          }
        }
      }
    },
    "Hide Tools" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Werkzeuge ausblenden"
          }
...
            "state" : "translated",
            "value" : "Trombone"
          }
        }
      }
    },
    "Part of a Stroke" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Teil eines Strichs"
          }
...
            "state" : "translated",
            "value" : "Note adhésive pêche"
          }
        }
      }
    },
    "Pen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stift"
          }
...
            "state" : "translated",
            "value" : "Stylo"
          }
        }
      }
    },
    "Pencil" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bleistift"
          }
...
            "state" : "translated",
            "value" : "Afficher la barre latérale"
          }
        }
      }
    },
    "Show Tools" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Werkzeuge einblenden"
          }
...
            "state" : "translated",
            "value" : "Tout le carnet"
          }
        }
      }
    },
    "Whole Strokes" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ganze Striche"
          }
...
